Rendering an animation skip some frames for compositing with 4.1 #118555

Closed
opened 2024-02-21 12:16:10 +01:00 by Yann Kervran · 5 comments

System Information
Operating system: Linux-6.5.0-5-amd64-x86_64-with-glibc2.37 64 Bits, X11 UI
Graphics card: NVIDIA GeForce GTX 980 Ti/PCIe/SSE2 NVIDIA Corporation 4.6.0 NVIDIA 525.147.05

Blender Version
Broken: version: 4.1.0 Beta, branch: blender-v4.1-release, commit date: 2024-02-12 20:16, hash: d45175c919f3 and later
Worked: version: 4.0.2, branch: blender-v4.0-release, commit date: 2023-12-05 07:41, hash: 9be62e85b7, type: release

Short description of error
When rendering the Animation, some of the frames are not rendered with the compositing. I have made several tests, and it is not always the same frames.

Blender 4.0 renders fine and later versions of 4.1 I have tried have the same error.

I have tried to replicate the bug with simpler setups, but it never occurred with my tests. So I enclose a copy of the involved files.

Exact steps for others to reproduce the error

  • Download and unzip attached .zip file
  • Open the rig_mechanical.blend file
  • Render animation

Note that some of the resulting images do not have compositing applied.

**System Information** Operating system: Linux-6.5.0-5-amd64-x86_64-with-glibc2.37 64 Bits, X11 UI Graphics card: NVIDIA GeForce GTX 980 Ti/PCIe/SSE2 NVIDIA Corporation 4.6.0 NVIDIA 525.147.05 **Blender Version** Broken: version: 4.1.0 Beta, branch: blender-v4.1-release, commit date: 2024-02-12 20:16, hash: `d45175c919f3` and later Worked: version: 4.0.2, branch: blender-v4.0-release, commit date: 2023-12-05 07:41, hash: 9be62e85b727, type: release **Short description of error** When rendering the Animation, some of the frames are not rendered with the compositing. I have made several tests, and it is not always the same frames. Blender 4.0 renders fine and later versions of 4.1 I have tried have the same error. I have tried to replicate the bug with simpler setups, but it never occurred with my tests. So I enclose a copy of the involved files. ![](attachments/29fe0d95-2282-4144-9f9b-99028e9aba4a) **Exact steps for others to reproduce the error** - Download and unzip attached .zip file - Open the `rig_mechanical.blend` file - Render animation Note that some of the resulting images do not have compositing applied.
Yann Kervran added the
Priority
Normal
Type
Report
Status
Needs Triage
labels 2024-02-21 12:16:11 +01:00

Hi @YannK,

Thank you for the bug report. Could you please clarify what you mean by "not rendered with the compositing"?

I have tested the "rig_mechanical.blend" file you provided and rendered the animation. In the result, I could see all frames as 60 PNG images with the "MRM_banner.png" added to the image by the compositor.

To further investigate the issue, could you try using the latest daily build of Blender? You can download it from this link: https://builder.blender.org/download/

Hi @YannK, Thank you for the bug report. Could you please clarify what you mean by "not rendered with the compositing"? I have tested the "rig_mechanical.blend" file you provided and rendered the animation. In the result, I could see all frames as 60 PNG images with the "MRM_banner.png" added to the image by the compositor. To further investigate the issue, could you try using the latest daily build of Blender? You can download it from this link: https://builder.blender.org/download/
Germano Cavalcante added
Status
Needs Information from User
and removed
Status
Needs Triage
labels 2024-02-21 20:56:39 +01:00
Author

Hi, thanks for your answer,

sorry for the lack of precision. I meant that some renders don’t include the compositing: look at these files : mech_rig_1_0002.png, mech_rig_1_0012.png, mech_rig_1_0013.png or mech_rig_1_0014.png are the viewlayer only and not the banner with the alpha over: Screenshot_20240221_232726.jpg

Which version do you want me to test 4.2 Alpha or 4.1 Beta ? Latest Beta I have done it is from today with version: 4.1.0 Beta, branch: blender-v4.1-release, commit date: 2024-02-20 18:18, hash: a3ffb51da6, type: Release

Hi, thanks for your answer, sorry for the lack of precision. I meant that some renders don’t include the compositing: look at these files : mech_rig_1_0002.png, mech_rig_1_0012.png, mech_rig_1_0013.png or mech_rig_1_0014.png are the viewlayer only and not the banner with the alpha over: ![Screenshot_20240221_232726.jpg](/attachments/29fe0d95-2282-4144-9f9b-99028e9aba4a) Which version do you want me to test 4.2 Alpha or 4.1 Beta ? Latest Beta I have done it is from today with version: 4.1.0 Beta, branch: blender-v4.1-release, commit date: 2024-02-20 18:18, hash: a3ffb51da6c5, type: Release

@YannK, apologies for the delay in replying.
I tested it now on 4.1.0 (Release Candidate), and I was indeed able to reproduce the problem:
image

However, in 4.2 Alpha, no matter how many times I render the animation, all images have compositing applied.
So it appears the bug has been fixed already.

@Sergey, any idea what might have fixed this issue and why the fix wasn't backported in 4.1?
(Bisecting this can be quite time consuming)

@YannK, apologies for the delay in replying. I tested it now on 4.1.0 (Release Candidate), and I was indeed able to reproduce the problem: ![image](/attachments/ddfffcfb-088d-42a2-ae8a-30771ef0eb8b) However, in 4.2 Alpha, no matter how many times I render the animation, all images have compositing applied. So it appears the bug has been fixed already. @Sergey, any idea what might have fixed this issue and why the fix wasn't backported in 4.1? (Bisecting this can be quite time consuming)
473 KiB
Author

No worry for the delay, you guys are doing a fabulous work :)
Let me know if I can be of any help in testing something.

No worry for the delay, you guys are doing a fabulous work :) Let me know if I can be of any help in testing something.

@mano-wii It is the switch to the full-frame compositor which is likely fixed the issue in 4.2.

@mano-wii It is the switch to the full-frame compositor which is likely fixed the issue in 4.2.
Blender Bot added
Status
Resolved
and removed
Status
Needs Info from Developers
labels 2024-03-25 18:13:54 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#118555
No description provided.